[gd_scene load_steps=14 format=3 uid="uid://c7cxjfoh3xme5"]

[ext_resource type="Script" path="res://main.gd" id="1_drvey"]
[ext_resource type="PackedScene" uid="uid://hbk1l0bonreu" path="res://player.tscn" id="1_hf7sd"]
[ext_resource type="PackedScene" uid="uid://yorer1ymbdyw" path="res://platform.tscn" id="2_34nc2"]
[ext_resource type="Script" path="res://cameraNode.gd" id="4_rukaf"]
[ext_resource type="PackedScene" uid="uid://c5l65pcv578or" path="res://enemy.tscn" id="5_6god5"]
[ext_resource type="PackedScene" uid="uid://d13mxrwk4mls3" path="res://goal.tscn" id="7_touhi"]
[ext_resource type="PackedScene" uid="uid://csjqjq6hmlm4e" path="res://largeGrass.tscn" id="8_fpjtj"]
[ext_resource type="PackedScene" uid="uid://cq8yxalyyastx" path="res://smallGrass.tscn" id="9_6g4fn"]
[ext_resource type="PackedScene" uid="uid://c6ya3fj6ybjxd" path="res://spikeyPlatform.tscn" id="11_r52p1"]
[ext_resource type="Script" path="res://levelFinishedUI.gd" id="12_bbebw"]
[ext_resource type="PackedScene" uid="uid://55qf2k2e80mb" path="res://background.tscn" id="12_v8jiu"]
[ext_resource type="Script" path="res://StartGameUI.gd" id="13_k0qme"]
[ext_resource type="Script" path="res://stopwatch.gd" id="15_bt8ne"]

[node name="RootCanvas" type="CanvasLayer"]

[node name="Node3D" type="Node3D" parent="."]
script = ExtResource("1_drvey")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Node3D"]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="Node3D/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Node3D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.355482, 0.934683, 0, -0.934683, 0.355482, 0, 3.91741, 0.756045)

[node name="cameraNode" type="Node3D" parent="Node3D/SubViewportContainer/SubViewport"]
transform = Transform3D(0.98085, -0.0558571, 0.186584, 0, 0.957993, 0.286792, -0.194765, -0.2813, 0.939647, 3.17835, 3.9898, 6.45874)
script = ExtResource("4_rukaf")

[node name="CameraGame" type="Camera3D" parent="Node3D/SubViewportContainer/SubViewport/cameraNode"]
transform = Transform3D(1, 7.45058e-09, -1.49012e-08, 0, 1, -2.98023e-08, 0, 0, 1, 0, 0, 0)
fov = 59.0

[node name="CameraStart" type="Camera3D" parent="Node3D/SubViewportContainer/SubViewport/cameraNode"]
transform = Transform3D(0.914037, -0.0296705, -0.404543, -0.0680521, 0.971969, -0.225046, 0.39988, 0.233231, 0.886397, 10.384, 8.6333, -28.8385)
current = true

[node name="platform2" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("2_34nc2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1042, 2.19091, -22.0269)

[node name="enemy" parent="Node3D/SubViewportContainer/SubViewport" node_paths=PackedStringArray("platform") instance=ExtResource("5_6god5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9075, 6, -21)
defaultPos = Vector3(-3.908, 6, -21)
platform = NodePath("../platform2")

[node name="enemy2" parent="Node3D/SubViewportContainer/SubViewport" node_paths=PackedStringArray("platform") instance=ExtResource("5_6god5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.1041, 6, -39.0073)
defaultPos = Vector3(-15.104, 6, -39.007)
platform = NodePath("../largeGrass2")

[node name="enemy4" parent="Node3D/SubViewportContainer/SubViewport" node_paths=PackedStringArray("platform") instance=ExtResource("5_6god5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.755, 6, -40.1821)
defaultPos = Vector3(-11.755, 6, -40.182)
platform = NodePath("../largeGrass2")

[node name="enemy3" parent="Node3D/SubViewportContainer/SubViewport" node_paths=PackedStringArray("platform") instance=ExtResource("5_6god5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0924997, 6, -21.1831)
defaultPos = Vector3(0.092, 6, -21.183)
platform = NodePath("../platform2")

[node name="goal" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("7_touhi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.4204, 3.04663, -44.8924)

[node name="largeGrass" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("8_fpjtj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.492808, 0)

[node name="spikeyPlatform" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("11_r52p1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.88045, 0.72086, -7.47739)

[node name="spikeyPlatform2" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("11_r52p1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.231686, 1.78349, -12.3448)

[node name="Background" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("12_v8jiu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.52856, 0)

[node name="player" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("1_hf7sd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
level = 1

[node name="largeGrass2" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("8_fpjtj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.4527, 2.31025, -39.501)

[node name="smallGrass" parent="Node3D/SubViewportContainer/SubViewport" instance=ExtResource("9_6g4fn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.96532, 2.46427, -33.2921)

[node name="StartGameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 554.0
offset_bottom = 444.0
pivot_offset = Vector2(-812, 333)
size_flags_horizontal = 4
script = ExtResource("13_k0qme")

[node name="StartBox" type="Panel" parent="StartGameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 504.0
offset_top = 130.0
offset_right = 965.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="StartGameUI/StartBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -64.5
offset_right = 124.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartGameUI/StartBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="StartGameUI/StartBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Goose Platformer"
horizontal_alignment = 1

[node name="nickname" type="TextEdit" parent="StartGameUI/StartBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "nickname"

[node name="start" type="Button" parent="StartGameUI/StartBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="exit" type="Button" parent="StartGameUI/StartBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="level1FinishedUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 554.0
offset_bottom = 444.0
pivot_offset = Vector2(-812, 333)
size_flags_horizontal = 4
script = ExtResource("12_bbebw")

[node name="finishBox" type="Panel" parent="level1FinishedUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 504.0
offset_top = 130.0
offset_right = 965.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="level1FinishedUI/finishBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -64.5
offset_right = 124.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="level1FinishedUI/finishBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="levelLabel" type="Label" parent="level1FinishedUI/finishBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1 Finished!"
horizontal_alignment = 1

[node name="timeLabel" type="Label" parent="level1FinishedUI/finishBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time: <time>"
horizontal_alignment = 1

[node name="startOver" type="Button" parent="level1FinishedUI/finishBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Over"

[node name="nextLevel" type="Button" parent="level1FinishedUI/finishBox/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="stopwatch" type="Node" parent="."]
script = ExtResource("15_bt8ne")

[connection signal="pressed" from="StartGameUI/StartBox/MarginContainer/VBoxContainer/start" to="StartGameUI" method="_on_start_pressed"]
[connection signal="pressed" from="StartGameUI/StartBox/MarginContainer/VBoxContainer/exit" to="StartGameUI" method="_on_exit_pressed"]
[connection signal="pressed" from="level1FinishedUI/finishBox/MarginContainer/VBoxContainer/startOver" to="level1FinishedUI" method="_on_start_pressed"]
[connection signal="pressed" from="level1FinishedUI/finishBox/MarginContainer/VBoxContainer/startOver" to="level1FinishedUI" method="_on_start_over_pressed"]
[connection signal="pressed" from="level1FinishedUI/finishBox/MarginContainer/VBoxContainer/nextLevel" to="level1FinishedUI" method="_on_next_level_pressed"]
[connection signal="pressed" from="level1FinishedUI/finishBox/MarginContainer/VBoxContainer/nextLevel" to="level1FinishedUI" method="_on_exit_pressed"]
